| Bug #29252 | Assertion `!table->file || table->file->inited == handler::NONE' failed. | ||
|---|---|---|---|
| Submitted: | 20 Jun 2007 21:44 | Modified: | 3 Jul 2007 18:51 |
| Reporter: | Shane Bester (Platinum Quality Contributor) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: CSV | Severity: | S1 (Critical) |
| Version: | 5.1.20 | OS: | Any |
| Assigned to: | Alexey Botchkov | CPU Architecture: | Any |
| Tags: | crash | ||
[20 Jun 2007 21:44]
Shane Bester
[20 Jun 2007 21:46]
Shane Bester
see top of file for user, host, password, gcc compile example.
Attachment: bug29252.c (text/plain), 6.05 KiB.
[25 Jun 2007 9:35]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/29486 ChangeSet@1.2528, 2007-06-25 13:31:34+05:00, holyfoot@mysql.com +1 -0 Bug #29252 Assertion 'table->file || table->file->inited == handler::NONE' failed when index_init() or rnd_init() return an error, we still set handler->inited to INDEX or RND in ha_index_init and ha_rnd_init. As caller doesn't call ha_*_end() in this case, we get DBUG_ASSERT failed.
[25 Jun 2007 10:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/29488 ChangeSet@1.2528, 2007-06-25 13:04:24+05:00, holyfoot@mysql.com +1 -0 Bug #29252 Assertion 'table->file || table->file->inited == handler::NONE' failed when index_init() or rnd_init() return an error, we still set handler->inited to INDEX or RND in ha_index_init and ha_rnd_init. As caller doesn't call ha_*_end() in this case, we get DBUG_ASSERT failed.
[25 Jun 2007 10:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/29491 ChangeSet@1.2528, 2007-06-25 12:45:34+05:00, holyfoot@mysql.com +1 -0 Bug #29252 Assertion 'table->file || table->file->inited == handler::NONE' failed when index_init() or rnd_init() return an error, we still set handler->inited to INDEX or RND in ha_index_init and ha_rnd_init. As caller doesn't call ha_*_end() in this case, we get DBUG_ASSERT failed.
[1 Jul 2007 19:57]
Bugs System
Pushed into 5.1.21-beta
[3 Jul 2007 18:51]
Paul DuBois
Noted in 5.1.21 changelog. Many threads accessing a CSV table simultaneously could cause an assertion failure.
